0.1.xx
======
- Fix generation of video images by starting the pipeline (bug #7996).
- Fix ownership race conditions when started twice (bug #8001).
- Add an ODF thumbnailer plugin.
- Add support for OpenRaster images in the ODF thumbnailer (bug #6108).

0.1.22
======
- Add coding style documentation.
- Fix compiler error on Sun Studio.
- Add a GStreamer-based thumbnailer for video thumbnails. Thanks to 
  Ross Burton for the work.
- Avoid GdkPixbuf functions deprecated in poppler >= 0.17 (bug #7649).
- Translation updates: Arabic, Basque, Catalan (Valencian),
  Chinese (China), Chinese (Taiwan), Danish, Dutch (Flemish), Finnish,
  French, German, Indonesian, Italian, Japanese, Kazakh, Korean, 
  Portuguese (Brazilian), Portuguese, Romanian, Russian, Slovak, 
  Spanish (Castilian), Swedish, Telugu, Turkish, Ukrainian.

0.1.21
======
- Update to latest revision of the thumbnail management D-Bus 
  specification where Cleanup() takes an array of base URIs instead
  of just one.
- Get rid of the inherently broken GStrv type in function signatures.
- Quit tumbler after at least 5 minutes of inactivity.

0.1.20
======
- Version bump to override incompatibly versioned packages for Maemo.
- Translation updates: Swedish.

0.1.6
=====
- Fix a possible segmentation fault in the JPEG thumbnailer plugin.
- Translation updates: Arabic, Chinese (Taiwan), Czech, English (United
  Kingdom), Finnish, French, Galician, Greek, Hebrew, Indonesian, 
  Japanese, Norwegian Bokmal, Polish, Romanian, Russian, Ukrainian.

0.1.5
=====
- Fix a segmentation fault when one of the thumbnailer directories is
  deleted (bug #6134).
- Fix sched_getparam/sched_setscheduler code on OpenBSD (bug #6061).
- Fix init/shutdown debug message in the JPEG thumbnailer plugin.
- Translation updates: Hungarian, Portuguese (Brazilian), German,
  Chinese (China), Catalan (Valencian), Italian, Basque, Kazakh,
  Portuguese, Danish.

0.1.4
=====
- Use LGPL instead of GPL license headers in the library (bug #6781).
