@@ -3,3 +3,4 @@ Philip Van Hoof <philip@codeminded.be>
 
 GStreamer video thumbnailer by Ross Burton <ross@linux.intel.com>
 ODF thumbnailer by Nick Schermer <nick@xfce.org>
+Raw thumbnailer by Tam Merlant <tam.ille@free.fr>
